--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@
 body {
     margin: 0px;
     position: relative;
+    font-family: Sans-Serif;
 }
 
 .hide {
@@ -24,9 +25,9 @@ body {
 }
 
 .main_container {
-    padding-top: 100px;
+    padding-top: 80px;
     background-color: red;
-    min-height: 655px;
+    min-height: 675px;
 }
 
 .product_item {
@@ -164,3 +165,51 @@ input[type='radio']:checked:after {
     text-transform: capitalize;
     font-family: Sans-Serif;
 }
+
+.dashboard_inner_container {
+    display: flex;
+}
+
+.dashboard_container .left_content {
+    background-color: #F5F5F5;
+    width: 200px;
+    height: 630px;
+}
+
+.left_content ul {
+    background-color: transparent;
+    list-style-type: none;
+}
+
+.left_content ul li {
+   margin-bottom: 15px;
+}
+
+.left_content ul li a {
+    font-size: 12px;
+    color: #2E2F30;
+    text-transform: capitalize;
+    text-decoration: none;
+}
+
+.left_content ul li a:hover {
+    text-decoration: underline;
+}
+
+.right_content {
+    padding: 15px;
+}
+
+.right_content .bread_crumb {
+    font-size: 10px;
+}
+
+
+
+
+
+
+
+
+
+
