--- a/app/views/admins/dashboard.html.erb
+++ b/app/views/admins/dashboard.html.erb
@@ -1,2 +1,9 @@
-<h1>Admins#dashboard</h1>
-<p>Find me in app/views/admins/dashboard.html.erb</p>
+<div class="dashboard_container">
+  <div class="dashboard_inner_container">
+    <!--left_content-->
+    <%= render "shared/admin_dashboard_menu" %>
+
+    <!--right_content-->
+    <%= render "shared/admin_dashboard" %>
+  </div>
+</div>
