--- a/app/views/shared/_admin_products.html.erb
+++ b/app/views/shared/_admin_products.html.erb
@@ -5,4 +5,14 @@
   <!--content-->
   <h1>Admins#products</h1>
   <p>Find me in app/views/admins/products.html.erb</p>
+  <div>
+    <ul>
+      <% @products.all.each do |product| %>
+        <li>
+          <div><%= product.name %></div>
+          <div><%= product.price %></div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
 </div>
