--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,7 @@ body {
 
 .main_container {
     padding-top: 80px;
-    background-color: red;
+    background-color: transparent;
     min-height: 675px;
 }
 
@@ -202,6 +202,30 @@ input[type='radio']:checked:after {
 
 .right_content .bread_crumb {
     font-size: 10px;
+    margin-bottom: 30px;
+}
+
+.table_content {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.table_content td, .table_content th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+.table_content tr:nth-child(even){background-color: #f2f2f2;}
+
+.table_content tr:hover {background-color: #ddd;}
+
+.table_content th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: white;
 }
 
 
