--- a/app/views/shared/_admin_products.html.erb
+++ b/app/views/shared/_admin_products.html.erb
@@ -3,16 +3,23 @@
   <div class="bread_crumb">home -> products</div>
 
   <!--content-->
-  <h1>Admins#products</h1>
-  <p>Find me in app/views/admins/products.html.erb</p>
-  <div>
-    <ul>
-      <% @products.all.each do |product| %>
-        <li>
-          <div><%= product.name %></div>
-          <div><%= product.price %></div>
-        </li>
+  <h1>products</h1>
+  <div class="table_container">
+    <table class="table_content">
+      <tr>
+        <th>product</th>
+        <th>price</th>
+        <th>variants</th>
+      </tr>
+
+      <% @products.all.each do |prod| %>
+        <tr>
+          <td><%= prod.name %></td>
+          <td><%= prod.price %></td>
+          <td><%= prod.variants.count %></td>
+        </tr>
       <% end %>
-    </ul>
+    </table>
   </div>
+  <!--content-->
 </div>
