--- a/app/views/variants/_form.html.erb
+++ b/app/views/variants/_form.html.erb
@@ -6,6 +6,7 @@
     <div class="form-inputs">
       <%= f.input :product_id, input_html: { value: "#{@product.id}" } %>
       <%= f.input :colour %>
+      <%= f.input :stock %>
 
       <!--image-->
       <div><%= f.input :image_url %></div>
