--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -228,6 +228,18 @@ input[type='radio']:checked:after {
     color: white;
 }
 
+.main_product_name {
+    font-weight: bold;
+    font-size: 35px;
+    margin-bottom: 30px;
+    text-transform: capitalize;
+}
+
+.border_content {
+    border-bottom: 1px solid black;
+    margin: 30px 0px;
+}
+
 
 
 
