--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,10 +1,11 @@
 <h1>Editing product</h1>
-
-<%= render "form", product: @product %>
-
+<div><%= render "form", product: @product %></div>
 <br>
-
 <div>
   <%= link_to "Show this product", @product %> |
-  <%= link_to "Back to products", products_path %>
+  <%= link_to "Back to products", products_path %> |
+  <% if current_admin %>
+    <%= link_to "admin variant", variant_admin_path(current_admin) %> |
+    <%= link_to "admin products", product_admin_path(current_admin) %>
+  <% end %>
 </div>
