--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -239,3 +239,7 @@ input[type='radio']:checked:after {
     border-bottom: 1px solid black;
     margin: 30px 0px;
 }
+
+.admin_product_img_cover img {
+    width: 70px;
+}
