--- a/app/views/shared/_admin_products.html.erb
+++ b/app/views/shared/_admin_products.html.erb
@@ -8,15 +8,17 @@
     <table class="table_content">
       <tr>
         <th>product</th>
+        <th>image</th>
         <th>price</th>
         <th>variants</th>
-        <th>stock</th>
+        <th>total stock</th>
         <th>action</th>
       </tr>
 
       <% @products.all.each do |prod| %>
         <tr>
           <td><%= link_to "#{prod.name}", prod, target: "_blank" %></td>
+          <td class="admin_product_img_cover"><%= image_tag "#{prod.image_url}" %></td>
           <td><%= prod.price %></td>
           <td><%= prod.variants.count %></td>
           <td><%= prod.stock_count %></td>
