--- a/app/views/shared/_admin_variants.html.erb
+++ b/app/views/shared/_admin_variants.html.erb
@@ -8,6 +8,7 @@
     <table class="table_content">
       <tr>
         <th>product</th>
+        <th>image</th>
         <th>price</th>
         <th>colour</th>
         <th>stock</th>
@@ -17,6 +18,7 @@
       <% @variants.all.each do |var| %>
         <tr>
           <td><%= link_to  "#{var.product.name}", product_path(var.product), target: "_blank" %></td>
+          <td class="admin_product_img_cover"><%= image_tag "#{var.image_url}" %></td>
           <td><%= var.product.price %></td>
           <td><%= var.colour %></td>
           <td><%= var.stock %></td>
