--- a/app/views/shared/_admin_products.html.erb
+++ b/app/views/shared/_admin_products.html.erb
@@ -3,7 +3,7 @@
   <div class="bread_crumb">home -> products</div>
 
   <!--content-->
-  <h1>products</h1>
+  <h1>products <%= "[#{@products.all.count}]" %></h1>
   <div class="table_container">
     <table class="table_content">
       <tr>
