--- a/app/views/shared/_admin_variants.html.erb
+++ b/app/views/shared/_admin_variants.html.erb
@@ -3,7 +3,7 @@
   <div class="bread_crumb">home -> inventory</div>
 
   <!--content-->
-  <h1>inventory</h1>
+  <h1>inventory <%= "[#{@variants.all.count}]" %></h1>
   <div class="table_container">
     <table class="table_content">
       <tr>
