--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,7 @@ body {
 }
 
 .product_item {
-    background-color: #B7BABD;
+    background-color: #f2f2f2;
     padding: 15px;
     border-radius: 5px;
     margin-bottom: 15px;
@@ -136,7 +136,7 @@ input[type='radio']:checked:after {
 }
 
 .variant_cover ul {
-    background-color: #F2F2F2;
+    background-color: #ffffff;
     list-style-type: none;
     border-radius: 3px;
     padding: 15px;
