--- a/app/views/shared/_admin_orders.html.erb
+++ b/app/views/shared/_admin_orders.html.erb
@@ -4,5 +4,5 @@
 
   <!--content-->
   <h1>Admins#orders</h1>
-  <p>Find me in app/views/admins/orders.html.erb</p>
+  <p>Find me in app/views/admins/orders.html.erb 1:25:01</p>
 </div>
