--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,9 +1,2 @@
 <h1>New order</h1>
-
-<%= render "form", order: @order %>
-
-<br>
-
-<div>
-  <%= link_to "Back to orders", orders_path %>
-</div>
+<div><%= render "form", order: @order %></div>
