--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,9 +1,10 @@
 
-<%= simple_form_for(@order) do |f| %>
+<%= simple_form_for [@admin, @order] do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
+    <%= f.input :admin_id %>
     <%= f.input :customer_email %>
     <%= f.input :fulfilled %>
     <%= f.input :total %>
