--- a/app/views/shared/_admin_orders.html.erb
+++ b/app/views/shared/_admin_orders.html.erb
@@ -6,6 +6,6 @@
   <h1>Admins#orders</h1>
   <p>Find me in app/views/admins/orders.html.erb 1:25:01</p>
   <div>
-    <%= link_to "new order", new_admin_order_path(current_admin) %>
+    <%= link_to "new order", new_admin_order_path(current_admin), class: "btn_general" %>
   </div>
 </div>
