--- a/app/views/shared/_admin_dashboard_menu.html.erb
+++ b/app/views/shared/_admin_dashboard_menu.html.erb
@@ -3,6 +3,6 @@
     <li><%= link_to "dashboard", dashboard_admin_path(current_admin) %></li>
     <li><%= link_to "products", product_admin_path(current_admin) %></li>
     <li><%= link_to "inventory", variant_admin_path(current_admin) %></li>
-    <li><%= link_to "orders", order_admin_path(current_admin) %></li>
+    <li><%= link_to "orders", listed_orders_admin_path(current_admin) %></li>
   </ul>
 </div>
