--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,2 +1,21 @@
-<h1>New order</h1>
-<div><%= render "form", order: @order %></div>
+<div class="dashboard_container">
+  <div class="dashboard_inner_container">
+    <!--left_content-->
+    <%= render "shared/admin_dashboard_menu" %>
+
+    <!--right_content-->
+
+
+
+
+    <div class="right_content">
+      <!--bread_crumb-->
+      <div class="bread_crumb">home -> new order</div>
+
+      <!--content-->
+      <div>
+        <%= render "form", order: @order %>
+      </div>
+    </div>
+  </div>
+</div>
