--- a/app/views/shared/_admin_orders.html.erb
+++ b/app/views/shared/_admin_orders.html.erb
@@ -3,9 +3,7 @@
   <div class="bread_crumb">home -> orders</div>
 
   <!--content-->
-  <h1>Admins#orders</h1>
-  <p>Find me in app/views/admins/orders.html.erb 1:25:01</p>
-  <div>
-    <%= link_to "new order", new_admin_order_path(current_admin), class: "btn_general" %>
-  </div>
+  <h1>orders <%= "[#{@orders.all.count}]" %></h1>
+  <div><%= link_to "new order", new_admin_order_path(current_admin), class: "btn_general" %></div>
+  <div><%= render "orders/index" %></div>
 </div>
