--- a/app/views/orders/_index.html.erb
+++ b/app/views/orders/_index.html.erb
@@ -7,6 +7,7 @@
       <th>total</th>
       <th>address</th>
       <th>fulfilled</th>
+      <th>created</th>
       <th>action</th>
     </tr>
 
@@ -16,10 +17,11 @@
         <td><%= order.total %></td>
         <td><%= order.address %></td>
         <td>-</td>
-        <td>
-          <span><%= link_to "edit", edit_admin_order_path(order.admin, order) %></span>
-          <span>|</span>
-          <span><%= button_to "delete", admin_order_path(order.admin, order), method: :delete %></span>
+        <td><%= order.created_at.strftime('%d %b %Y') %></td>
+        <td class="display_flex_style">
+          <div><%= link_to "edit", edit_admin_order_path(order.admin, order) %></div>
+          <div class="margin_hor_15px">|</div>
+          <div><%= button_to "delete", admin_order_path(order.admin, order), method: :delete %></div>
         </td>
       </tr>
     <% end %>
