--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -7,7 +7,7 @@
       <!--section-->
       <div class="form_fields_cover">
         <div class="form_title">input section</div>
-        <div><%= f.input :admin_id %></div>
+        <div class="hide"><%= f.input :admin_id %></div>
         <div><%= f.input :name %></div>
         <div><%= f.input :image_url %></div>
         <div><%= f.input :price %></div>
