--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :admin_id %>
+    <div class="hide"><%= f.input :admin_id %></div>
     <%= f.input :customer_email %>
     <%= f.input :fulfilled %>
     <%= f.input :total %>
