--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -6,7 +6,7 @@
     <!--right_content-->
     <div class="right_content">
       <!--bread_crumb-->
-      <div class="bread_crumb">home -> new order</div>
+      <div class="bread_crumb">home -> <%= link_to "order", listed_orders_admin_path(current_admin) %> -> new order</div>
 
       <!--content-->
       <div>
