--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,9 +1,18 @@
-<h1>New product</h1>
+<div class="dashboard_container">
+  <div class="dashboard_inner_container">
+    <!--left_content-->
+    <%= render "shared/admin_dashboard_menu" %>
 
-<%= render "form", product: @product %>
+    <!--right_content-->
+    <div class="right_content">
+      <!--bread_crumb-->
+      <div class="bread_crumb">home -> <%= link_to "products", product_admin_path(current_admin) %> -> new product</div>
 
-<br>
-
-<div>
-    <%= link_to "Back to products", products_path %>
+      <!--content-->
+      <div>
+        <%= render "form", product: @product %>
+      </div>
+    </div>
+  </div>
 </div>
+
