--- a/app/views/variants/_form.html.erb
+++ b/app/views/variants/_form.html.erb
@@ -4,7 +4,7 @@
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
     <div class="form-inputs">
-      <%= f.input :product_id, input_html: { value: "#{@product.id}" } %>
+      <div class="hide"><%= f.input :product_id, input_html: { value: "#{@product.id}" } %></div>
       <%= f.input :colour %>
       <%= f.input :stock %>
 
