--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,7 +6,7 @@
     <!--right_content-->
     <div class="right_content">
       <!--bread_crumb-->
-      <div class="bread_crumb">home -> <%= link_to 'orders', listed_orders_admin_path(current_admin) %> -> order</div>
+      <div class="bread_crumb">home -> <%= link_to 'orders', listed_orders_admin_path(current_admin) %> -> <%= @order.customer_email %></div>
 
       <!--content-->
       <div>
