--- a/app/views/shared/_admin_products.html.erb
+++ b/app/views/shared/_admin_products.html.erb
@@ -25,10 +25,12 @@
           <td><%= prod.variants.count %></td>
           <td><%= prod.stock_count %></td>
           <td><%= prod.created_at.strftime('%d %b %Y') %></td>
-          <td>
-            <span><%= link_to "edit product", edit_product_path(prod) %></span>
-            <span>|</span>
-            <span><%= link_to "add variant", new_variant_path(product_id: prod) %></span>
+          <td class="display_flex_style">
+            <div><%= link_to "add variant", new_variant_path(product_id: prod) %></div>
+            <div class="margin_hor_15px">|</div>
+            <div><%= link_to "edit product", edit_product_path(prod) %></div>
+            <div class="margin_hor_15px">|</div>
+            <div><%= button_to "delete", product_path(prod), method: :delete %></div>
           </td>
         </tr>
       <% end %>
