--- a/app/views/orders/_index.html.erb
+++ b/app/views/orders/_index.html.erb
@@ -2,6 +2,7 @@
 <div class="table_container">
   <table class="table_content">
     <tr>
+      <th>order ID</th>
       <th>customer</th>
       <th>total</th>
       <th>address</th>
@@ -12,6 +13,7 @@
 
     <% @orders.all.each do |order| %>
       <tr>
+        <td><%= link_to "#{order.id}", admin_order_path(order.admin, order) %></td>
         <td><%= link_to "#{order.customer_email}", admin_order_path(order.admin, order) %></td>
         <td><%= order.total %></td>
         <td><%= order.address %></td>
