--- a/app/views/orders/_index.html.erb
+++ b/app/views/orders/_index.html.erb
@@ -1,4 +1,5 @@
 <!--content-->
+<h1>un-fulfilled orders</h1>
 <div class="table_container">
   <table class="table_content">
     <tr>
@@ -11,7 +12,38 @@
       <th>action</th>
     </tr>
 
-    <% @orders.all.each do |order| %>
+    <% @not_fulfilled_orders.all.each do |order| %>
+      <tr>
+        <td><%= link_to "#{order.id}", admin_order_path(order.admin, order) %></td>
+        <td><%= link_to "#{order.customer_email}", admin_order_path(order.admin, order) %></td>
+        <td><%= order.total %></td>
+        <td><%= order.address %></td>
+        <td><%= order.fulfilled %></td>
+        <td><%= order.created_at.strftime('%d %b %Y') %></td>
+        <td class="display_flex_style">
+          <div><%= link_to "edit", edit_admin_order_path(order.admin, order) %></div>
+          <div class="margin_hor_15px">|</div>
+          <div><%= button_to "delete", admin_order_path(order.admin, order), method: :delete %></div>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+</div>
+
+<h1>fulfilled orders</h1>
+<div class="table_container">
+  <table class="table_content">
+    <tr>
+      <th>order ID</th>
+      <th>customer</th>
+      <th>total</th>
+      <th>address</th>
+      <th>fulfilled</th>
+      <th>created</th>
+      <th>action</th>
+    </tr>
+
+    <% @fulfilled.all.each do |order| %>
       <tr>
         <td><%= link_to "#{order.id}", admin_order_path(order.admin, order) %></td>
         <td><%= link_to "#{order.customer_email}", admin_order_path(order.admin, order) %></td>
