--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -268,3 +268,7 @@ input[type='radio']:checked:after {
     display: flex;
     margin-bottom: 15px;
 }
+
+.table_container {
+    margin-bottom: 100px;
+}
