--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -32,13 +32,17 @@
         <th>product</th>
         <th>image</th>
         <th>price</th>
+        <th>colour</th>
+        <th>quantity</th>
       </tr>
 
       <% order.order_products.each do |prod| %>
         <tr>
-          <td><%= prod.name %></td>
-          <td class="admin_product_img_cover"><%= image_tag "#{prod.image_url}" %></td>
-          <td><%= prod.price %></td>
+          <td><%= link_to "#{prod.product.name}", product_path(prod.product), target: "_blank" %></td>
+          <td class="admin_product_img_cover"><%= image_tag "#{prod.product.image_url}" %></td>
+          <td><%= prod.product.price %></td>
+          <td><%= prod.size %></td>
+          <td><%= prod.quantity %></td>
         </tr>
       <% end %>
     </table>
