--- a/app/views/shared/_admin_products.html.erb
+++ b/app/views/shared/_admin_products.html.erb
@@ -8,6 +8,7 @@
   <div class="table_container">
     <table class="table_content">
       <tr>
+        <th>product ID</th>
         <th>product</th>
         <th>image</th>
         <th>price</th>
@@ -19,6 +20,7 @@
 
       <% @products.all.each do |prod| %>
         <tr>
+          <td><%= link_to "#{prod.id}", prod, target: "_blank" %></td>
           <td><%= link_to "#{prod.name}", prod, target: "_blank" %></td>
           <td class="admin_product_img_cover"><%= image_tag "#{prod.image_url}" %></td>
           <td><%= prod.price %></td>
