--- a/app/views/shared/_admin_dashboard_menu.html.erb
+++ b/app/views/shared/_admin_dashboard_menu.html.erb
@@ -1,6 +1,7 @@
 <div class="left_content">
   <ul>
     <li><%= link_to "dashboard", dashboard_admin_path(current_admin) %></li>
+    <li><%= link_to "customers", "#" %></li>
     <li><%= link_to "products", product_admin_path(current_admin) %></li>
     <li><%= link_to "inventory", variant_admin_path(current_admin) %></li>
     <li><%= link_to "orders", listed_orders_admin_path(current_admin) %></li>
