--- a/app/views/admins/dashboard.html.erb
+++ b/app/views/admins/dashboard.html.erb
@@ -4,6 +4,6 @@
     <%= render "shared/admin_dashboard_menu" %>
 
     <!--right_content-->
-    <%= render "shared/admin_dashboard" %>
+    <%= render "admins/admin_dashboard" %>
   </div>
 </div>
