--- a/app/views/admins/_admin_dashboard.html.erb
+++ b/app/views/admins/_admin_dashboard.html.erb
@@ -5,4 +5,5 @@
   <!--content-->
   <h1>Admins#dashboard</h1>
   <p>Find me in app/views/admins/dashboard.html.erb</p>
+  <%= render "admins/admin_dashboard_data" %>
 </div>
