--- a/app/views/admins/_admin_dashboard.html.erb
+++ b/app/views/admins/_admin_dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="right_content">
   <!--bread_crumb-->
-  <div class="bread_crumb">home -> dashboard</div>
+  <div class="bread_crumb">home -> dashboard -> daily stats</div>
 
   <!--content-->
   <%= render "admins/admin_dashboard_data" %>
