--- a/app/views/admins/_admin_dashboard_data.html.erb
+++ b/app/views/admins/_admin_dashboard_data.html.erb
@@ -4,8 +4,8 @@
   <ul>
     <li>
       <div>
-        <div>Revenue</div>
-        <div><%= "$#{@quick_stats[:revenue] ? (@quick_stats[:revenue]/100.0).to_s}" %></div>
+        <div>Revenue</div> ? (@quick_stats[:revenue]/100.0).to_s}
+        <div><%= @quick_stats[:revenue] ? (@quick_stats[:revenue]/100.0).to_s : "0" %></div>
       </div>
     </li>
   </ul>
