--- a/app/views/admins/_admin_dashboard_data.html.erb
+++ b/app/views/admins/_admin_dashboard_data.html.erb
@@ -1,12 +1,24 @@
-<div>admin_dashboard_data 2:00:00</div>
+<div class="data_container">
+  <div class="data_summary">
+    <ul>
 
-<div>
-  <ul>
-    <li>
-      <div>
-        <div>Revenue</div> ? (@quick_stats[:revenue]/100.0).to_s}
-        <div><%= @quick_stats[:revenue] ? (@quick_stats[:revenue]/100.0).to_s : "0" %></div>
-      </div>
-    </li>
-  </ul>
+      <!--data-->
+      <li>
+        <div class="data_box">
+          <div class="data_title">Revenue</div>
+          <div class="data_stats"><%= @quick_stats[:revenue] ? (@quick_stats[:revenue]/100.0).to_s : "0" %></div>
+        </div>
+      </li>
+
+      <!--data-->
+      <li>
+        <div class="data_box">
+          <div class="data_title">Revenue</div>
+          <div class="data_stats"><%= @quick_stats[:revenue] ? (@quick_stats[:revenue]/100.0).to_s : "0" %></div>
+        </div>
+      </li>
+    </ul>
+  </div>
+
+
 </div>
