--- a/app/views/admins/_admin_dashboard_data.html.erb
+++ b/app/views/admins/_admin_dashboard_data.html.erb
@@ -1,7 +1,8 @@
 <div class="data_container">
-  <div class="data_summary">
-    <ul>
 
+  <!--data_summary-->
+  <div class="data_summary_section">
+    <ul>
       <!--data-->
       <li>
         <div class="data_box">
@@ -19,6 +20,10 @@
       </li>
     </ul>
   </div>
+
+
+  <!--data_graph-->
+  <div class="data_graph_section hide">data_graph_section</div>
 
 
 </div>
