--- a/app/views/admins/_admin_dashboard_data.html.erb
+++ b/app/views/admins/_admin_dashboard_data.html.erb
@@ -1,4 +1,5 @@
 <div class="data_container">
+  <div class="data_section_header">daily stats</div>
 
   <!--data_summary-->
   <div class="data_summary_section">
@@ -6,7 +7,7 @@
       <!--data-->
       <li>
         <div class="data_box">
-          <div class="data_title">Revenue</div>
+          <div class="data_title">revenue</div>
           <div class="data_stats"><%= @quick_stats[:revenue] ? (@quick_stats[:revenue]/100.0).to_s : "0" %></div>
         </div>
       </li>
@@ -14,8 +15,8 @@
       <!--data-->
       <li>
         <div class="data_box">
-          <div class="data_title">Revenue</div>
-          <div class="data_stats"><%= @quick_stats[:revenue] ? (@quick_stats[:revenue]/100.0).to_s : "0" %></div>
+          <div class="data_title">total sale</div>
+          <div class="data_stats"><%= @quick_stats[:sales] ? (@quick_stats[:sales]).to_s : "0" %></div>
         </div>
       </li>
     </ul>
