--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -224,7 +224,7 @@ input[type='radio']:checked:after {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #04AA6D;
+    background-color: #2699FB;
     color: white;
 }
 
