--- a/app/views/admins/_admin_dashboard_data.html.erb
+++ b/app/views/admins/_admin_dashboard_data.html.erb
@@ -32,7 +32,7 @@
       <li>
         <div class="data_box">
           <div class="data_title">items/sale</div>
-          <div class="data_stats"><%= @quick_stats[:per_sale] ? (@quick_stats[:per_sale]/100.0).to_s : "0" %></div>
+          <div class="data_stats"><%= @quick_stats[:per_sale].to_i %></div>
         </div>
       </li>
     </ul>
