--- a/app/views/admins/_admin_dashboard_data.html.erb
+++ b/app/views/admins/_admin_dashboard_data.html.erb
@@ -37,8 +37,12 @@
       </li>
     </ul>
   </div>
+  <div class="clear"></div>
 
 
   <!--data_graph-->
-  <div class="data_graph_section hide">data_graph_section</div>
+  <div class="data_graph_section" data-controller="dashboard">
+    <div>data_graph_section</div>
+    <canvas id="revenueChart"></canvas>
+  </div>
 </div>
