--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,11 @@ body {
     display: none;
 }
 
+. {
+    clear: both !important;
+}
+
+
 .main_container {
     padding-top: 80px;
     background-color: transparent;
@@ -292,6 +297,7 @@ input[type='radio']:checked:after {
     list-style-type: none;
     padding: 0px;
     margin: 0px;
+    display: inline-block;
 }
 
 .data_summary_section ul li {
@@ -313,5 +319,10 @@ input[type='radio']:checked:after {
 
 .red_text {
     color: #B00100;
+}
+
+.data_graph_section {
+    display: block;
+    margin-top: 30px;
 }
 
