--- a/app/views/admins/_admin_dashboard_data.html.erb
+++ b/app/views/admins/_admin_dashboard_data.html.erb
@@ -41,8 +41,15 @@
 
 
   <!--data_graph-->
-  <div class="data_graph_section" data-controller="dashboard">
-    <div>data_graph_section</div>
-    <canvas id="revenueChart"></canvas>
+<!--  <div class="data_graph_section" data-controller="dashboard">-->
+<!--    <div>data_graph_section</div>-->
+<!--    <canvas id="revenueChart"></canvas>-->
+<!--  </div>-->
+
+  <div data-controller="dashboard">
+    <canvas id="bar-chart" data-dashboard-target="myChart" width="800" height="450"></canvas>
   </div>
+
+
+
 </div>
