--- a/app/views/admins/_admin_dashboard_data.html.erb
+++ b/app/views/admins/_admin_dashboard_data.html.erb
@@ -47,7 +47,7 @@
 <!--  </div>-->
 
   <div data-controller="dashboard">
-    <canvas id="revenueChart" data-dashboard-target="myChart" width="800" height="450"></canvas>
+    <canvas id="revenueChart" data-dashboard-target="myRevenueChart" width="800" height="450"></canvas>
   </div>
 
 
