--- a/app/views/admins/_admin_dashboard_data.html.erb
+++ b/app/views/admins/_admin_dashboard_data.html.erb
@@ -41,15 +41,9 @@
 
 
   <!--data_graph-->
-<!--  <div class="data_graph_section" data-controller="dashboard">-->
-<!--    <div>data_graph_section</div>-->
-<!--    <canvas id="revenueChart"></canvas>-->
-<!--  </div>-->
-
-  <div data-controller="dashboard">
-    <canvas id="revenueChart" data-dashboard-target="myRevenueChart" width="800" height="450"></canvas>
+  <div class="data_graph_section" data-controller="dashboard">
+    <div>data_graph_section</div>
+    <canvas id="revenueChart"></canvas>
   </div>
-
-
-
+  <!--data_graph-->
 </div>
