--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -203,6 +203,7 @@ input[type='radio']:checked:after {
 .right_content {
     padding: 15px;
     height: 1200px;
+    width: 100%
 }
 
 .right_content .bread_crumb {
