--- a/app/views/admins/_admin_dashboard_data.html.erb
+++ b/app/views/admins/_admin_dashboard_data.html.erb
@@ -42,7 +42,7 @@
 
   <!--data_graph-->
 
-    <div class="data_graph_section" data-controller="dashboard" data-dashboard-revenue-value="<%= @orders_by_day.to_json %>">
+    <div class="data_graph_section" data-controller="dashboard" data-dashboard-revenue-value="<%= @orders_by_day.to_a.to_json %>">
       <h2>Revenue</h2>
       <canvas id="revenueChart" width="100%" height="30%"></canvas>
     </div>
